# download-minio

./: .gitignore  Dockerfile  Dockerfile .dev  Dockerfile-Base  Jenkinsfile  LICENSE  Makefile  README.md  creat_cach_mapfile.py  docker-compose.yml  falhas_payload.json  gunicorn_conf.py  pyproject.toml  settings.toml  start.sh  start_upload.py
.github/workflows/: code-quality.yml  homol.yml  prod.yml  release.yml  test.yml
app/: config.py  db.py  errors.py  exceptions.py  functions.py  routers.py  server.py  start_upload.py
app/api/: bibio.py  biblio.py  collections.py  download.py  layers.py  status.py  timeseries.py  timesires.py
app/middleware/: TokenMiddleware.py  analytics.py
app/model/: creat_geofile.py  functions.py  mapfile.py  models.py  payload.py  source.py
app/scripts/: upload.py
app/util/: functions.py  mapfile.py
dev/: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  install.sh
docker/homol/: Dockerfile
docker/homologation/: Dockerfile
docker/prod/: Dockerfile
docker/production/: Dockerfile
scripts/: upload.py
templates/: error.html
templates/css/: main.css
test/: test_payload.py
test/payloads/: falhas_payload.json
tests/: test_payload.py
tests/payloads/:  Campanhas de Inspeção Visual.json  Malha Viária.json  agropecuaria.json  area_declarada.json  areas_especias.json  pa_br_somsc.json  pasture_col6.json  pasture_col6.jsonok  pasture_quality.json  visita_de_campo.json
