[tool.poetry]
name = "DownloadMinio"
version = "0.1.0"
description = ""
authors = ["Jairo Matos da Rocha <jairo@discente.ufg.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
dynaconf = "^3.2.6"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
geopandas = "^1.0.1"
rasterio = "^1.4.2"
geojson = "^3.1.0"
loguru = "^0.7.2"
pydantic = {extras = ["email"], version = "2.9.2"}
python-multipart = "^0.0.17"
pytz = "^2024.2"
motor = "^3.6.0"
Jinja2 = "^3.1.2"
minio = "^7.2.10"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
mappyfile = "^1.0.2"
psutil = "^6.1.0"
unidecode = "^1.3.8"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
opentelemetry-distro = "^0.45b0"
opentelemetry-exporter-otlp = "^1.28.1"


[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.13"
web-pdb = "^1.6.2"
blue = "^0.9.0"
prospector = "^1.13.0"
pytest = "^8.3.3"
pip-audit = "^2.7.3"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
